--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -32,16 +32,17 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <RowDefinition Height="2*" />
+                <RowDefinition Height="3*" />
             </Grid.RowDefinitions>
 
+            <!--This shows the Pull Request Grid-->
+            
             <dxlc:LayoutGroup Header="Pull Requests" Grid.Row="0">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
-                        <!--<RowDefinition Height="Auto" />-->
                     </Grid.RowDefinitions>
 
                     <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" 
@@ -77,6 +78,9 @@
 
             </dxlc:LayoutGroup>
 
+            <!--This shows the items dependent on a Pull Request in separate tabs
+            The particular information is in a separate view.-->
+            
             <dxlc:LayoutGroup Grid.Row="1" Orientation="Vertical"  View="Tabs" >
 
                 <dxlc:LayoutGroup.GroupBoxStyle>
@@ -90,213 +94,27 @@
                 </dxlc:LayoutGroup.GroupBoxStyle>
 
                 <dxlc:LayoutGroup Header="Attachments" >
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <vncazdopv:CommonGridHeader x:Name="commonGridHeaderAttachments" Grid.Row="0" 
-                                            Count="{Binding ResultsAttachments.Count, Mode=TwoWay}"/>
-
-                        <dxg:GridControl x:Name="grdResultsAttachments" Grid.Row="1"
-                    ItemsSource="{Binding ResultsAttachments.ResultItems}"
-                    SelectedItem="{Binding ResultsAttachments.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                            
-                            <dxg:GridColumn FieldName="pullRequestId" />                            
-                            <dxg:GridColumn FieldName="title" />
-                            <dxg:GridColumn FieldName="description" />
-                            <dxg:GridColumn FieldName="codeReviewId" />
-                            <dxg:GridColumn FieldName="status" />
-                            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                            <dxg:GridColumn FieldName="creationDate" Header="Creation Date">
-                                <dxg:GridColumn.EditSettings>
-                                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                                </dxg:GridColumn.EditSettings>
-                            </dxg:GridColumn>
-                            <!--<dxg:GridColumn FieldName="url" />-->
-                        </dxg:GridControl>
-
-                        <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsAttachments.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                        <!--<TextBlock Text="{Binding Message}" Grid.Row="3" />-->
-                    </Grid>
-
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestAttachmentMainRegion}" />
                 </dxlc:LayoutGroup>
-
+                
                 <dxlc:LayoutGroup Header="Commits" >
                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestCommitMainRegion}" />
                 </dxlc:LayoutGroup>
 
-
                 <dxlc:LayoutGroup Header="Iterations" >
                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestIterationMainRegion}" />
                 </dxlc:LayoutGroup>
-                
+
                 <dxlc:LayoutGroup Header="Labels" >
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <vncazdopv:CommonGridHeader x:Name="commonGridHeaderLabels" Grid.Row="0" 
-                                            Count="{Binding ResultsLabels.Count, Mode=TwoWay}"/>
-
-                        <dxg:GridControl x:Name="grdResultsLabels" Grid.Row="1"
-                    ItemsSource="{Binding ResultsLabels.ResultItems}"
-                    SelectedItem="{Binding ResultsLabels.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                            <dxg:GridColumn FieldName="title" />
-                            <dxg:GridColumn FieldName="description" />
-                            <dxg:GridColumn FieldName="pullRequestId" />
-                            <dxg:GridColumn FieldName="codeReviewId" />
-                            <dxg:GridColumn FieldName="status" />
-                            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                            <dxg:GridColumn FieldName="creationDate" />
-                            <!--<dxg:GridColumn FieldName="url" />-->
-                        </dxg:GridControl>
-
-                        <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsLabels.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                        <!--<TextBlock Text="{Binding Message}" Grid.Row="3" />-->
-                    </Grid>
-
-                </dxlc:LayoutGroup>
-
-                <dxlc:LayoutGroup Header="Properties" >
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <vncazdopv:CommonGridHeader x:Name="commonGridHeaderProperties" Grid.Row="0"
-                                            Count="{Binding ResultsProperties.Count, Mode=TwoWay}"/>
-
-                        <dxg:GridControl x:Name="grdResultsProperties" Grid.Row="1"
-                    ItemsSource="{Binding ResultsProperties.ResultItems}"
-                    SelectedItem="{Binding ResultsProperties.SelectedItem.value}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                            <dxg:GridColumn FieldName="value.MicrosoftGitPullRequestIsDraft.type" />
-                            <dxg:GridColumn FieldName="value.MicrosoftGitPullRequestIsDraft.value" />
-                            <dxg:GridColumn FieldName="MicrosoftGitPullRequestSourceRefName.type" />
-                            <dxg:GridColumn FieldName="MicrosoftGitPullRequestSourceRefName.value" />
-                            <dxg:GridColumn FieldName="MicrosoftGitPullRequestTargetRefName.type" />
-                            <dxg:GridColumn FieldName="MicrosoftGitPullRequestTargetRefName.value" />
-
-                            <!--<dxg:GridColumn FieldName="url" />-->
-                        </dxg:GridControl>
-
-                        <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsProperties.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                        <TextBlock Text="{Binding Message}" Grid.Row="3" />
-                    </Grid>
-
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestLabelMainRegion}" />
                 </dxlc:LayoutGroup>
 
                 <dxlc:LayoutGroup Header="Reviewers" >
                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestReviewerMainRegion}" />
                 </dxlc:LayoutGroup>
 
-                <dxlc:LayoutGroup Header="Statuses" >
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <vncazdopv:CommonGridHeader x:Name="commonGridHeaderStatuses" Grid.Row="0" 
-                                            Count="{Binding ResultsStatuses.Count, Mode=TwoWay}"/>
-
-                        <dxg:GridControl x:Name="grdResultsStatuses" Grid.Row="1"
-                    ItemsSource="{Binding ResultsStatuses.ResultItems}"
-                    SelectedItem="{Binding ResultsStatuses.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                            <dxg:GridColumn FieldName="title" />
-                            <dxg:GridColumn FieldName="description" />
-                            <dxg:GridColumn FieldName="pullRequestId" />
-                            <dxg:GridColumn FieldName="codeReviewId" />
-                            <dxg:GridColumn FieldName="status" />
-                            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                            <dxg:GridColumn FieldName="creationDate" />
-                            <!--<dxg:GridColumn FieldName="url" />-->
-
-                        </dxg:GridControl>
-
-                        <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsStatuses.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                        <TextBlock Text="{Binding Message}" Grid.Row="3" />
-                    </Grid>
-
-                </dxlc:LayoutGroup>
-
                 <dxlc:LayoutGroup Header="Threads" >
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <vncazdopv:CommonGridHeader x:Name="commonGridHeaderThreads" Grid.Row="0"
-                                            Count="{Binding ResultsThreads.Count, Mode=TwoWay}"/>
-
-                        <dxg:GridControl x:Name="grdResultsThreads" Grid.Row="1"
-                    ItemsSource="{Binding ResultsThreads.ResultItems}"
-                    SelectedItem="{Binding ResultsThreads.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                            <dxg:GridColumn FieldName="title" />
-                            <dxg:GridColumn FieldName="description" />
-                            <dxg:GridColumn FieldName="pullRequestId" />
-                            <dxg:GridColumn FieldName="codeReviewId" />
-                            <dxg:GridColumn FieldName="status" />
-                            <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                            <dxg:GridColumn FieldName="creationDate" />
-                            <!--<dxg:GridColumn FieldName="url" />-->
-                        </dxg:GridControl>
-
-                        <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsThreads.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
-
-                        <TextBlock Text="{Binding Message}" Grid.Row="3" />
-                    </Grid>
-
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestThreadMainRegion}" />
                 </dxlc:LayoutGroup>
 
                 <dxlc:LayoutGroup Header="WorkItems" >
