--- a/AZDORestApiExplorer.Git/Presentation/Views/RefMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/RefMain.xaml
@@ -52,11 +52,16 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="objectId" />
-            <dxg:GridColumn FieldName="creator" />
-            <dxg:GridColumn FieldName="isLockedBy" />
+
+            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows" />
+
+            <dxg:GridColumn FieldName="creator.displayName" Header="Creator" BestFitModeOnSourceChange="VisibleRows" />
+            <!--<dxg:GridColumn FieldName="creator.uniqueName" BestFitModeOnSourceChange="VisibleRows" />-->
             <dxg:GridColumn FieldName="isLocked" />
+            <dxg:GridColumn FieldName="isLockedBy.displayName" Header="IsLockedBy" BestFitModeOnSourceChange="VisibleRows" />
+            <!--<dxg:GridColumn FieldName="isLockedBy.uniqueName" BestFitModeOnSourceChange="VisibleRows" />-->
+            <dxg:GridColumn FieldName="objectId" BestFitModeOnSourceChange="VisibleRows" />            
+            
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
