--- a/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/BuildMain.xaml
@@ -36,76 +36,14 @@
 
     <dxlc:LayoutControl Orientation="Vertical">
 
-        <dxlc:LayoutGroup Header="Builds" >
-            
-            <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <!--<RowDefinition Height="*" />-->
-        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2*" />
+            </Grid.RowDefinitions>
 
-        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
-                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
+            <dxlc:LayoutGroup  Grid.Row="0" Header="Builds" >
 
-        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-            <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="buildNumber" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="definition.name" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="sourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="sourceVersion" />
-            <dxg:GridColumn FieldName="repository.name" BestFitModeOnSourceChange="VisibleRows" />
-            <dxg:GridColumn FieldName="queue.name" BestFitModeOnSourceChange="VisibleRows" />
-            <dxg:GridColumn FieldName="queue.pool.name" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="queueTime" />
-            <dxg:GridColumn FieldName="startTime" />
-            <dxg:GridColumn FieldName="finishTime" />
-            <!--<dxg:GridColumn FieldName="finishTime" EditSettings="{dxe:TextEditSettings DisplayFormat=G}" />-->
-            
-            <!--<dxg:GridColumn FieldName="plan.planId" />--> <!--This is Array-->
-            <dxg:GridColumn FieldName="project.name" />
-            <dxg:GridColumn FieldName="requestedFor.displayName" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="requestedBy.displayName" BestFitModeOnSourceChange="VisibleRows"/>
-
-            <dxg:GridColumn FieldName="parameters" />
-            <dxg:GridColumn FieldName="reason" />
-            <dxg:GridColumn FieldName="triggerInfo.cimessage" BestFitModeOnSourceChange="VisibleRows"/>            
-            <dxg:GridColumn FieldName="triggerInfo.cisourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="triggerInfo.cisourceSha" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="triggerInfo.citriggerRepository" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="triggerInfo.scheduleName" BestFitModeOnSourceChange="VisibleRows"/>            
-        </dxg:GridControl>
-
-        <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.url}"
-            TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
-
-    </Grid>
-
-        </dxlc:LayoutGroup>
-
-
-        <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs">
-
-            <dxlc:LayoutGroup.GroupBoxStyle>
-                <Style TargetType="dxlc:GroupBox">
-                    <Setter Property="Background" Value="Transparent" />
-                    <Setter Property="BorderBrush" Value="Transparent" />
-                    <Setter Property="BorderThickness" Value="0" />
-                    <Setter Property="Padding" Value="0" />
-                    <Setter Property="TitleVisibility" Value="Collapsed" />
-                </Style>
-            </dxlc:LayoutGroup.GroupBoxStyle>
-
-            <dxlc:LayoutGroup Header="Something About Build" >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -113,37 +51,90 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <vncazdopv:CommonGridHeader x:Name="commonGridHeaderAttachments" Grid.Row="0" 
-                                            Count="{Binding ResultsAttachments.Count, Mode=TwoWay}"/>
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
 
-                    <dxg:GridControl x:Name="grdResultsAttachments" Grid.Row="1"
-                    ItemsSource="{Binding ResultsAttachments.ResultItems}"
-                    SelectedItem="{Binding ResultsAttachments.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                        <dxg:GridColumn FieldName="title" />
-                        <dxg:GridColumn FieldName="description" />
-                        <dxg:GridColumn FieldName="pullRequestId" />
-                        <dxg:GridColumn FieldName="codeReviewId" />
-                        <dxg:GridColumn FieldName="status" />
-                        <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                        <dxg:GridColumn FieldName="creationDate" />
-                        <!--<dxg:GridColumn FieldName="url" />-->
+                    <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                        ItemsSource="{Binding Results.ResultItems}"
+                        SelectedItem="{Binding Results.SelectedItem}"
+                        FontSize="12"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                        <dxg:GridColumn FieldName="id" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="buildNumber" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="definition.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="sourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="sourceVersion" />
+                        <dxg:GridColumn FieldName="repository.name" BestFitModeOnSourceChange="VisibleRows" />
+                        <dxg:GridColumn FieldName="queue.name" BestFitModeOnSourceChange="VisibleRows" />
+                        <dxg:GridColumn FieldName="queue.pool.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="queueTime" Width="150">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="startTime" Width="150" >
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="finishTime" Width="150" >
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <!--<dxg:GridColumn FieldName="finishTime" EditSettings="{dxe:TextEditSettings DisplayFormat=G}" />-->
+
+                        <!--<dxg:GridColumn FieldName="plan.planId" />-->
+                        <!--This is Array-->
+                        <!--<dxg:GridColumn FieldName="project.name" Header="Team Project" />-->
+                        <dxg:GridColumn FieldName="requestedFor.displayName" Header="Requested For" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="requestedBy.displayName" Header="Requested By" BestFitModeOnSourceChange="VisibleRows"/>
+
+                        <dxg:GridColumn FieldName="parameters" />
+                        <dxg:GridColumn FieldName="reason" />
+                        <dxg:GridColumn FieldName="triggerInfo.cimessage" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="triggerInfo.cisourceBranch" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="triggerInfo.cisourceSha" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="triggerInfo.citriggerRepository" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="triggerInfo.scheduleName" BestFitModeOnSourceChange="VisibleRows"/>
                     </dxg:GridControl>
 
                     <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding ResultsAttachments.SelectedItem.url}"
-                    TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
+                        Text="{Binding Results.SelectedItem.url}"
+                        TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
                 </Grid>
 
             </dxlc:LayoutGroup>
 
-        </dxlc:LayoutGroup>
+            <!--
+                This shows the items dependent on a Build in separate tabs
+                The particular information is in a separate view.
+            -->
+            
+            <dxlc:LayoutGroup Grid.Row="1"  Orientation="Vertical" View="Tabs">
 
+                <dxlc:LayoutGroup.GroupBoxStyle>
+                    <Style TargetType="dxlc:GroupBox">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="TitleVisibility" Value="Collapsed" />
+                    </Style>
+                </dxlc:LayoutGroup.GroupBoxStyle>
 
+                <dxlc:LayoutGroup Header="Build Changes" >
+                    <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestAttachmentMainRegion}" />-->
+                </dxlc:LayoutGroup>
+
+            </dxlc:LayoutGroup>
+
+        </Grid>
+        
     </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
