--- a/AZDORestApiExplorer.Build/Presentation/Views/TagMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/TagMain.xaml
@@ -1,8 +1,8 @@
 <vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Git.Presentation.Views.StatMain"
+    x:Class="AZDORestApiExplorer.Build.Presentation.Views.TagMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://prismlibrary.com/"
+    xmlns:prism="http://www.codeplex.com/prism"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 
@@ -16,11 +16,11 @@
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
-    xmlns:local="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:local="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
-    xmlns:views="clr-namespace:AZDORestApiExplorer.Git.Presentation.Views"
+    xmlns:views="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
-    prism:ViewModelLocator.AutoWireViewModel="False"
+    prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
@@ -45,30 +45,19 @@
                                     Count="{Binding Results.Count, Mode=TwoWay}"/>
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+            ItemsSource="{Binding Results.ResultItems}"
+            SelectedItem="{Binding Results.SelectedItem}"
+            FontSize="12"
+            ScrollViewer.CanContentScroll="True"
+            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.commitId" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.author.name" Header="Author" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.author.date" Header="Authored Date" BestFitModeOnSourceChange="VisibleRows" >
+            <dxg:GridColumn FieldName="xxx" Header="XXX" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="date" Header="Date" Width="150">
                 <dxg:GridColumn.EditSettings>
                     <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
-            <dxg:GridColumn FieldName="commit.committer.name" Header="Committer" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="commit.committer.date" Header="Committed Date" BestFitModeOnSourceChange="VisibleRows" >
-                <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                </dxg:GridColumn.EditSettings>
-            </dxg:GridColumn>
-            <dxg:GridColumn FieldName="aheadCount" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="behindCount" BestFitModeOnSourceChange="VisibleRows"/>
-            <dxg:GridColumn FieldName="isBaseVersion" BestFitModeOnSourceChange="VisibleRows"/>
 
         </dxg:GridControl>
 
