--- a/AZDORestApiExplorer/Presentation/Views/Areas/BuildArea.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/BuildArea.xaml
@@ -76,6 +76,10 @@
             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.SettingMainRegion}" />
         </dxlc:LayoutGroup>
 
+        <dxlc:LayoutGroup Header="Tags" >
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.BuildTagMainRegion}" />
+        </dxlc:LayoutGroup>
+
     </dxlc:LayoutGroup>
 
 </UserControl>
